<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/color5Primary"
    app:cardCornerRadius="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/author_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/type"
            android:src="@drawable/next"
            app:layout_constraintBottom_toBottomOf="@id/post_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/post_author"
            app:tint="@color/color5Accent" />

        <TextView
            android:id="@+id/post_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/color5Accent"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/author_type"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="9adour" />

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/color5Accent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/post_author"
            app:layout_constraintTop_toBottomOf="@id/post_author"
            tools:text="16:12" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hide"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/hide"
            android:textAllCaps="false"
            android:textColor="@color/color5Primary"
            android:textSize="12sp"
            app:backgroundTint="@color/color5Accent"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="@id/post_time"
            app:layout_constraintEnd_toStartOf="@id/share"
            app:layout_constraintTop_toTopOf="@id/post_author" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:contentDescription="@string/share"
            android:src="@drawable/share"
            android:tint="@color/color5Accent"
            app:layout_constraintBottom_toBottomOf="@id/post_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/post_author" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/color5Accent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/author_type"
            app:layout_constraintTop_toBottomOf="@id/post_time"
            tools:text="hey there!" />

        <TextView
            android:id="@+id/post_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/color5Accent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/author_type"
            app:layout_constraintTop_toBottomOf="@id/post_title"
            tools:text="hey there, this is the first goddamn post, and it looks so fucking  good mate..." />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/twitter"
            android:textAllCaps="false"
            android:textColor="@color/color5Primary"
            app:backgroundTint="@color/color5Accent"
            app:cornerRadius="32dp"
            app:icon="@drawable/twitter"
            app:iconTint="@color/color5Primary"
            app:layout_constraintBottom_toTopOf="@id/facebook"
            app:layout_constraintStart_toStartOf="@id/author_type"
            app:layout_constraintTop_toBottomOf="@id/post_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/color5Primary"
            app:backgroundTint="@color/color5Accent"
            app:cornerRadius="32dp"
            app:icon="@drawable/facebook"
            app:iconTint="@color/color5Primary"
            app:layout_constraintBottom_toTopOf="@id/instagram"
            app:layout_constraintStart_toStartOf="@id/author_type"
            app:layout_constraintTop_toBottomOf="@id/twitter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/instagram"
            android:textAllCaps="false"
            android:textColor="@color/color5Primary"
            app:backgroundTint="@color/color5Accent"
            app:cornerRadius="32dp"
            app:icon="@drawable/instagram"
            app:iconTint="@color/color5Primary"
            app:layout_constraintBottom_toTopOf="@id/linkedin"
            app:layout_constraintStart_toStartOf="@id/author_type"
            app:layout_constraintTop_toBottomOf="@id/facebook" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/linkedin"
            android:textAllCaps="false"
            android:textColor="@color/color5Primary"
            app:backgroundTint="@color/color5Accent"
            app:cornerRadius="32dp"
            app:icon="@drawable/linkedin"
            app:iconTint="@color/color5Primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/author_type"
            app:layout_constraintTop_toBottomOf="@id/instagram" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>