<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorCard"
    app:cardCornerRadius="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/post_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/create_social_media_post" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="@id/post_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/post_type"
            app:tint="@color/colorAccent"
            android:contentDescription="@string/close" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/social_media_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/post_title"
            android:textColorHint="@color/primaryTextColor"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp"
            app:boxStrokeColor="@color/primaryTextColor"
            app:boxStrokeErrorColor="@color/colorError"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primaryTextColor"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:helperTextEnabled="false"
            app:hintTextColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@id/close"
            app:layout_constraintStart_toStartOf="@id/post_type"
            app:layout_constraintTop_toBottomOf="@id/post_type">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="4dp"
                android:textAlignment="textStart"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@color/primaryTextColor"
                android:textCursorDrawable="@null"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/social_media_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/social_media_description"
            android:textColorHint="@color/primaryTextColor"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp"
            app:boxStrokeColor="@color/primaryTextColor"
            app:boxStrokeErrorColor="@color/colorError"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primaryTextColor"
            app:errorIconTint="@color/colorError"
            app:errorTextColor="@color/colorError"
            app:helperTextEnabled="false"
            app:hintTextColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@id/close"
            app:layout_constraintStart_toStartOf="@id/post_type"
            app:layout_constraintTop_toBottomOf="@id/social_media_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:inputType="textMultiLine"
                android:paddingStart="24dp"
                android:paddingEnd="4dp"
                android:textAlignment="textStart"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@color/primaryTextColor"
                android:textCursorDrawable="@null"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/post_small"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/create_post"
            android:textAllCaps="false"
            app:drawableTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/social_media_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>