<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".views.fragments.StartFragment">

    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/start"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/illustration" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="It's so simple to use."
        android:textColor="@color/primaryTextColor"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Just put a username and you can use the app directly, no signup needed."
        android:textColor="@color/primaryTextColor"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username"
        android:textColorHint="@color/secondaryTextColor"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:startIconDrawable="@drawable/person"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeColor="@color/secondaryTextColor"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="clear_text"
        app:helperTextEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/start"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="4dp"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:padding="12dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/i_am_in"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>